TITLE: Changelog for the triples module for GNU Emacs.

* 0.2
- Create a default database to encourage a shared triple database.  Add information on why this is an interesting idea in the README.

* 0.1
- This is the initial version that contained basic triple functionality, and was integrated into GNU ELPA.